--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.7.8",
+    "@amcharts/amcharts4-geodata": "^4.1.8",
     "bulma": "^0.7.5",
     "vue": "^2.6.10",
     "vue-carousel-3d": "^0.2.0",
+    "vue-function-api": "^2.0.6",
     "vue-i18n": "^8.15.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
