CHG: carousel-bulma added

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@amcharts/amcharts4": "^4.7.8",
     "@amcharts/amcharts4-geodata": "^4.1.8",
     "bulma": "^0.7.5",
+    "bulma-carousel": "^4.0.4",
     "vue": "^2.6.10",
     "vue-carousel-3d": "^0.2.0",
     "vue-function-api": "^2.0.6",
