--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@amcharts/amcharts4": "^4.7.8",
     "@amcharts/amcharts4-geodata": "^4.1.8",
+    "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "bulma-carousel": "^4.0.4",
     "vue": "^2.6.10",
