--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-carousel-3d": "^0.2.0",
     "vue-function-api": "^2.0.6",
     "vue-i18n": "^8.15.0",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.2"
   },
