--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "bulma-carousel": "^4.0.4",
+    "google-maps-api-loader": "^1.1.1",
     "vue": "^2.6.10",
     "vue-carousel-3d": "^0.2.0",
     "vue-function-api": "^2.0.6",
